ENH: After de-templating this class the implementation has to be in a          .cxx file instead of a .txx.   The class is also integrated in the ITKNumerics Library.

--- a/Code/Numerics/CMakeLists.txt
+++ b/Code/Numerics/CMakeLists.txt
@@ -7,6 +7,20 @@ itkCompositeValleyFunction
 itkMultipleValuedVnlCostFunctionAdaptor
 itkMultivariateLegendrePolynomial
 itkSingleValuedVnlCostFunctionAdaptor
+itkAmoebaOptimizer
+itkConjugateGradientOptimizer
+itkGradientDescentOptimizer
+itkLBFGSOptimizer
+itkLevenbergMarquardtOptimizer
+itkMultipleValuedNonLinearOptimizer
+itkMultipleValuedNonLinearVnlOptimizer
+itkOptimizer
+itkQuaternionRigidTransformGradientDescentOptimizer
+itkRegularStepGradientDescentBaseOptimizer
+itkRegularStepGradientDescentOptimizer
+itkSingleValuedNonLinearOptimizer
+itkSingleValuedNonLinearVnlOptimizer
+itkVersorTransformOptimizer
 )
 
 LINK_LIBRARIES (
