BUG: remove double object

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -190,7 +190,7 @@ itkVectorNeighborhoodOperatorImageFilterTest
 itkNaryAddImageFilterTest 
 itkDerivativeImageFilterTest 
 itkDiscreteGaussianImageFilterTest 
-itkWarpImageFilterTest itkWarpImageFilterTest
+itkWarpImageFilterTest
 )
 
 
