ENH: new filter to flip an image along user specified axes.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -51,6 +51,7 @@ ADD_TEST(itkExpandImageFilterTest itkBasicFiltersTests itkExpandImageFilterTest)
 ADD_TEST(itkVectorExpandImageFilterTest itkBasicFiltersTests itkVectorExpandImageFilterTest)
 ADD_TEST(itkFilterDispatchTest itkBasicFiltersTests itkFilterDispatchTest)
 ADD_TEST(itkAddImageFilterTest itkBasicFiltersTests itkAddImageFilterTest)
+ADD_TEST(itkFlipImageFilterTest itkBasicFiltersTests itkFlipImageFilterTest)
 ADD_TEST(itkFloodFillIteratorTest itkBasicFiltersTests itkFloodFillIteratorTest)
 ADD_TEST(itkGaussianImageSourceTest itkBasicFiltersTests itkGaussianImageSourceTest)
 ADD_TEST(itkImageAdaptorNthElementTest itkBasicFiltersTests itkImageAdaptorNthElementTest)
@@ -141,6 +142,7 @@ itkExpandImageFilterTest
 itkVectorExpandImageFilterTest 
 itkFilterDispatchTest 
 itkAddImageFilterTest 
+itkFlipImageFilterTest
 itkFloodFillIteratorTest 
 itkGaussianImageSourceTest 
 itkImageAdaptorNthElementTest 
