--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -67,6 +67,7 @@ ADD_TEST(itkMedianImageFilterTest itkBasicFiltersTests itkMedianImageFilterTest)
 ADD_TEST(itkMultiplyImageFilterTest itkBasicFiltersTests itkMultiplyImageFilterTest)
 ADD_TEST(itkMinimumMaximumImageFilterTest itkBasicFiltersTests itkMinimumMaximumImageFilterTest)
 ADD_TEST(itkNeighborhoodConnectedImageFilterTest itkBasicFiltersTests itkNeighborhoodConnectedImageFilterTest ${ITK_DATA_ROOT}/Input/cthead1.png ${ITK_DATA_ROOT}/Baseline/BasicFilters/NeighborhoodConnectedImageFilterTest.png)
+ADD_TEST(itkNormalizeImageFilterTest itkBasicFiltersTests itkNormalizeImageFilterTest)
 ADD_TEST(itkPermuteAxesImageFilterTest itkBasicFiltersTests itkPermuteAxesImageFilterTest)
 ADD_TEST(itkPlaheImageFilterTest itkBasicFiltersTests itkPlaheImageFilterTest)
 ADD_TEST(itkReflectiveImageRegionIteratorTest itkBasicFiltersTests  itkReflectiveImageRegionIteratorTest )
@@ -158,6 +159,7 @@ itkMedianImageFilterTest
 itkMultiplyImageFilterTest 
 itkMinimumMaximumImageFilterTest 
 itkNeighborhoodConnectedImageFilterTest 
+itkNormalizeImageFilterTest 
 itkPermuteAxesImageFilterTest 
 itkPlaheImageFilterTest 
 itkReflectImageFilterTest 
