ENH: Added a new test for image classifier framework.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -98,6 +98,7 @@ ADD_TEST(itkPatternIntensityImageMetricTest itkAlgorithmsTests  itkPatternIntens
 # ADD_TEST(itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest itkAlgorithmsTests itkPointSetToImageTranslationPatternIntensityRegularStepGradientDescentRegistrationTest)
 ADD_TEST(itkRegionGrow2DTest itkAlgorithmsTests itkRegionGrow2DTest)
 ADD_TEST(itkSupervisedClassifierTest itkAlgorithmsTests itkSupervisedClassifierTest)
+ADD_TEST(itkSupervisedImageClassifierTest itkAlgorithmsTests itkSupervisedImageClassifierTest)
 ADD_TEST(itkUnsupervisedClassifierTest itkAlgorithmsTests itkUnsupervisedClassifierTest)
 ADD_TEST(itkGibbsTest itkAlgorithmsTests itkGibbsTest)
 ADD_TEST(itkDeformableTest itkAlgorithmsTests itkDeformableTest)
@@ -175,6 +176,7 @@ itkOtsuThresholdImageCalculatorTest
 itkPatternIntensityImageMetricTest 
 itkRegionGrow2DTest 
 itkSupervisedClassifierTest 
+itkSupervisedImageClassifierTest
 itkUnsupervisedClassifierTest 
 itkGibbsTest 
 itkDeformableTest 
