ENH: Test for itkMultivariateLegendrePolynomial   added.

--- a/Testing/Code/Numerics/CMakeLists.txt
+++ b/Testing/Code/Numerics/CMakeLists.txt
@@ -12,6 +12,7 @@ ADD_TEST(itkConjugateGradientOptimizerTest itkNumericsTests itkConjugateGradient
 ADD_TEST(itkGradientDescentOptimizerTest itkNumericsTests itkGradientDescentOptimizerTest)
 ADD_TEST(itkLevenbergMarquardtOptimizerTest itkNumericsTests itkLevenbergMarquardtOptimizerTest)
 ADD_TEST(itkLBFGSOptimizerTest itkNumericsTests itkLBFGSOptimizerTest)
+ADD_TEST(itkMultivariateLegendrePolynomialTest itkNumericsTests itkMultivariateLegendrePolynomialTest)
 ADD_TEST(itkNumericsTest itkNumericsTests itkNumericsTest)
 ADD_TEST(itkOptimizersHierarchyTest itkNumericsTests itkOptimizersHierarchyTest)
 ADD_TEST(itkRegularStepGradientDescentOptimizerTest itkNumericsTests itkRegularStepGradientDescentOptimizerTest)
@@ -29,6 +30,7 @@ itkConjugateGradientOptimizerTest
 itkGradientDescentOptimizerTest 
 itkLevenbergMarquardtOptimizerTest
 itkLBFGSOptimizerTest
+itkMultivariateLegendrePolynomialTest
 itkNumericsTest
 itkOptimizersHierarchyTest
 itkRegularStepGradientDescentOptimizerTest 
