ENH: itkCovarianceCalculatorTest, itkMeanCalculatorTest, itkImageToListAdaptorTest, itkSubsampleTest, and itkMembershipSampleTest are added.

--- a/Testing/Code/Numerics/Statistics/CMakeLists.txt
+++ b/Testing/Code/Numerics/Statistics/CMakeLists.txt
@@ -5,9 +5,15 @@ ADD_TEST(PrintSelf-Statistics ${TCL_TCLSH}
 ENDIF (TCL_TCLSH)
 
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/Numerics/vxl/vcl/doc
-                    ${ITK_SOURCE_DIR}/Code/Numerics/vxl/vnl 
+                    ${ITK_SOURCE_DIR}/Code/Numerics/vxl/vnl
+                    ${ITK_SOURCE_DIR}/Code/BasicFilters 
                     ${ITK_SOURCE_DIR}/Code/Numerics/Statistics)
 
+ADD_TEST(itkCovarianceCalculatorTest itkStatisticsTests itkCovarianceCalculatorTest)
+ADD_TEST(itkMeanCalculatorTest itkStatisticsTests itkMeanCalculatorTest)
+ADD_TEST(itkSubsampleTest itkStatisticsTests itkSubsampleTest)
+ADD_TEST(itkMembershipSampleTest itkStatisticsTests itkMembershipSampleTest)
+ADD_TEST(itkImageToListAdaptorTest itkStatisticsTests itkImageToListAdaptorTest)
 ADD_TEST(itkHistogramTest itkStatisticsTests itkHistogramTest)
 ADD_TEST(itkDenseFrequencyContainerTest itkStatisticsTests itkDenseFrequencyContainerTest)
 ADD_TEST(itkFastRandomUnitNormalVariateGeneratorTest itkStatisticsTests 
@@ -20,11 +26,20 @@ ITKStatistics
 )
 
 SOURCE_FILES(Statistics_SRCS
+itkCovarianceCalculatorTest
+itkMeanCalculatorTest
+itkSubsampleTest
+itkMembershipSampleTest
+itkImageToListAdaptorTest
 itkHistogramTest 
 itkDenseFrequencyContainerTest
 itkFastRandomUnitNormalVariateGeneratorTest 
 )
 
 ADD_EXECUTABLE(itkStatisticsTests itkStatisticsTests.cxx Statistics_SRCS)
+
+
+
+
 
 
