--- a/Testing/Code/Numerics/Statistics/CMakeLists.txt
+++ b/Testing/Code/Numerics/Statistics/CMakeLists.txt
@@ -9,6 +9,7 @@ INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Code/Numerics/vxl/vcl/doc
                     ${ITK_SOURCE_DIR}/Code/BasicFilters 
                     ${ITK_SOURCE_DIR}/Code/Numerics/Statistics)
 
+ADD_TEST(itkStatisticsAlgorithmTest itkStatisticsTests itkStatisticsAlgorithmTest)
 ADD_TEST(itkCovarianceCalculatorTest itkStatisticsTests itkCovarianceCalculatorTest)
 ADD_TEST(itkMeanCalculatorTest itkStatisticsTests itkMeanCalculatorTest)
 ADD_TEST(itkSubsampleTest itkStatisticsTests itkSubsampleTest)
@@ -26,6 +27,7 @@ ITKStatistics
 )
 
 SOURCE_FILES(Statistics_SRCS
+itkStatisticsAlgorithmTest
 itkCovarianceCalculatorTest
 itkMeanCalculatorTest
 itkSubsampleTest
