ENH: Upgraded the MRFImageFilter to use the new classifier framework.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -74,7 +74,7 @@ ADD_TEST(itkLevelSetShapeDetectionTest itkAlgorithmsTests itkLevelSetShapeDetect
 ADD_TEST(itkMeanSquaresImageMetricTest itkAlgorithmsTests itkMeanSquaresImageMetricTest)
 ADD_TEST(itkMinimumMaximumImageCalculatorTest itkAlgorithmsTests itkMinimumMaximumImageCalculatorTest)
 ADD_TEST(itkMinMaxCurvatureFlowImageFilterTest itkAlgorithmsTests itkMinMaxCurvatureFlowImageFilterTest)
-ADD_TEST(itkMRFLabellerTest itkAlgorithmsTests itkMRFLabellerTest)
+ADD_TEST(itkMRFImageFilterTest itkAlgorithmsTests itkMRFImageFilterTest)
 ADD_TEST(itkMultiResolutionPyramidImageFilterTest itkAlgorithmsTests itkMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkRecursiveMultiResolutionPyramidImageFilterTest itkAlgorithmsTests itkRecursiveMultiResolutionPyramidImageFilterTest)
 ADD_TEST(itkMultiResolutionPDEDeformableRegistrationTest itkAlgorithmsTests itkMultiResolutionPDEDeformableRegistrationTest)
@@ -160,7 +160,7 @@ itkLevelSetShapeDetectionTest
 itkMeanSquaresImageMetricTest 
 itkMinimumMaximumImageCalculatorTest 
 itkMinMaxCurvatureFlowImageFilterTest 
-itkMRFLabellerTest 
+itkMRFImageFilterTest
 itkMultiResolutionPyramidImageFilterTest 
 itkRecursiveMultiResolutionPyramidImageFilterTest 
 itkMultiResolutionPDEDeformableRegistrationTest 
