ENH: Classes for profiling perfomance of run-time code itkTimeProbe and TimeProbeCollectorBase

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -32,6 +32,8 @@ itkSegmentationBorder
 itkSegmentationRegion 
 itkSimpleFastMutexLock
 itkTimeStamp 
+itkTimeProbe
+itkTimeProbesCollectorBase
 itkVersion 
 itkVector
 itkXMLFileOutputWindow
