--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -33,8 +33,7 @@ ADD_EXECUTABLE(itkRawImageIOTest2 itkRawImageIOTest2)
 ENDIF(VW_RAW_DATA_PATH)
 
 # Add VTK code if we found VTK
-INCLUDE (${ITK_SOURCE_DIR}/Utilities/ITKFindVTK.cmake)
-IF (USE_VTK_FILE)
+IF (HAS_VTK)
   ADD_DEFINITIONS(-DITK_HAS_VTK)
   INCLUDE(${USE_VTK_FILE})
   LINK_LIBRARIES( 
@@ -50,7 +49,7 @@ IF (VTKTIFF_BINARY_DIR)
         vtktiff
   )
 ENDIF (VTKTIFF_BINARY_DIR)
-ENDIF (USE_VTK_FILE)
+ENDIF (HAS_VTK)
 
 IF (TCL_TCLSH)
 ADD_TEST(PrintSelf-IO ${TCL_TCLSH}
