--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,26 @@ ENDIF(ITK_WRAP_TCL)
 OPTION(USE_VTK "Use VTK (The Visualization Toolkit) (some examples need this)" 0)
 IF(USE_VTK)
   INCLUDE (${ITK_SOURCE_DIR}/Utilities/ITKFindVTK.cmake)
+  IF (USE_VTK_FILE)
+    INCLUDE (${USE_VTK_FILE})
+    # Test for VTK using std libs
+    IF(VTK_USE_ANSI_STDLIB)
+      SET(HAS_VTK 1 CACHE INTERNAL "VTK Headers and Libraries are available")
+    ELSE( VTK_USE_ANSI_STDLIB )
+      MESSAGE ("Warning. Your VTK was not built with the VTK_USE_ANSI_STDLIB option ON. \nPlease reconfigure and recompile VTK with this option before trying to use it with ITK.")
+    ENDIF( VTK_USE_ANSI_STDLIB )
+    # Test for VTK building Hybrid
+    IF(VTK_USE_HYBRID)
+      SET(HAS_VTK_HYBRID 1 CACHE INTERNAL "VTK Hybrid libraries are available")
+    ELSE( VTK_USE_HYBRID )
+      MESSAGE ("Warning. Your VTK was not built with the VTK_USE_HYBRID option ON. \nPlease reconfigure and recompile VTK with this option before trying to use it with ITK.")
+    ENDIF( VTK_USE_HYBRID )
+  ELSE (USE_VTK_FILE)
+    MESSAGE("The UseVTK.cmake file was not found. You will not be able to build code requiring VTK")
+    SET(HAS_VTK 0 CACHE INTERNAL)
+  ENDIF (USE_VTK_FILE)
 ENDIF(USE_VTK)
+
 
 # Add an option to use or not use FLTK (http://www.fltk.org)
 OPTION(USE_FLTK "Use FLTK (The Fast Light Toolkit) for GUI (some examples need this)" 0)
