ENH: Converted the ITPACK sources to C++ compatible format. ENH: Moved ITPACK functions to itk::fem::itpack namespace. ENH: Added function prototypes for all routines implemented in ITPACK.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -126,9 +126,8 @@ ENDIF(WIN32)
 
 
 # Include the ITPACK library within FEM
-SOURCE_FILES(FEM_SRCS 
-  itpack_dsrc2c.c
-  itpack_dummy.c
+SOURCE_FILES(FEM_SRCS
+  itpack.cxx
 )
 IF(NOT UNIX)
 IF(WIN32)
