ENH:  Added itkCropImageFilterTest.cxx

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -81,6 +81,7 @@ ADD_TEST(itkConstantPadImageTest itkBasicFiltersTests itkConstantPadImageTest)
 ADD_TEST(itkWrapPadImageTest itkBasicFiltersTests itkWrapPadImageTest)
 ADD_TEST(itkMirrorPadImageTest itkBasicFiltersTests itkMirrorPadImageTest)
 ADD_TEST(itkExtractImageTest itkBasicFiltersTests itkExtractImageTest)
+ADD_TEST(itkCropImageFilterTest itkBasicFiltersTests itkCropImageFilterTest)
 ADD_TEST(itkSinImageFilterAndAdaptorTest itkBasicFiltersTests itkSinImageFilterAndAdaptorTest)
 ADD_TEST(itkSpatialFunctionImageEvaluatorFilterTest itkBasicFiltersTests itkSpatialFunctionImageEvaluatorFilterTest)
 ADD_TEST(itkSqrtImageFilterAndAdaptorTest itkBasicFiltersTests itkSqrtImageFilterAndAdaptorTest)
@@ -174,6 +175,7 @@ itkConstantPadImageTest
 itkWrapPadImageTest 
 itkMirrorPadImageTest 
 itkExtractImageTest 
+itkCropImageFilterTest
 itkSpatialFunctionImageEvaluatorFilterTest 
 itkStreamingImageFilterTest 
 itkStreamingImageFilterTest2 
