ENH: Kmeans code for the new classifier framework.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -69,6 +69,7 @@ ADD_TEST(itkImageRegistrationMethodTest_13 itkAlgorithmsTests itkImageRegistrati
 ADD_TEST(itkImageRegistrationMethodTest_14 itkAlgorithmsTests itkImageRegistrationMethodTest_14)
 ADD_TEST(itkInterpolateTest itkAlgorithmsTests itkInterpolateTest)
 ADD_TEST(itkKalmanLinearEstimatorTest itkAlgorithmsTests itkKalmanLinearEstimatorTest)
+ADD_TEST(itkKmeansModelEstimatorTest itkAlgorithmsTests itkKmeansModelEstimatorTest)
 ADD_TEST(itkLevelSet2DFunctionTest itkAlgorithmsTests itkLevelSet2DFunctionTest)
 ADD_TEST(itkLevelSetShapeDetectionTest itkAlgorithmsTests itkLevelSetShapeDetectionTest)
 ADD_TEST(itkMeanSquaresImageMetricTest itkAlgorithmsTests itkMeanSquaresImageMetricTest)
@@ -155,6 +156,7 @@ itkImageRegistrationMethodTest_13
 itkImageRegistrationMethodTest_14 
 itkInterpolateTest 
 itkKalmanLinearEstimatorTest 
+itkKmeansModelEstimatorTest
 itkLevelSet2DFunctionTest 
 itkLevelSetShapeDetectionTest 
 itkMeanSquaresImageMetricTest 
