ENH- new CMakeFile including SpatialObject files

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -1,4 +1,4 @@
-SUBDIRS(Numerics Common BasicFilters IO Algorithms )
+SUBDIRS(Numerics Common BasicFilters IO Algorithms SpatialObject )
 
 IF(UNIX)
   LINK_LIBRARIES (
