ENH: Marked FEM_USE_SMART_POINTERS and FEM_VISUALIZATION options as advanced.

--- a/Code/Numerics/FEM/CMakeLists.txt
+++ b/Code/Numerics/FEM/CMakeLists.txt
@@ -155,6 +155,7 @@ SOURCE_GROUP("Source Files Template" ./*.txx)
 
 # Add an option to use SmartPointers
 OPTION(FEM_USE_SMART_POINTERS "Select whether Finite Elements Modeling (FEM) classes will be derived from itk::LightObject and use SmartPointers or not. If you select to use SmartPointers, be sure to define FEM_USE_SMART_POINTERS macro before including the FEM classes.")
+MARK_AS_ADVANCED( FEM_USE_SMART_POINTERS )
 IF(FEM_USE_SMART_POINTERS)
 # Define the macro that includes smartpointers
 ADD_DEFINITIONS( -DFEM_USE_SMART_POINTERS )
@@ -166,11 +167,13 @@ ENDIF(FEM_USE_SMART_POINTERS)
 # Add an option to build the visualization functions
 IF(WIN32)
     OPTION(FEM_VISUALIZATION "Select whether the visualization functions will be built for Finite Elements Modeling (FEM) classes or not. If you select to build visualization functions, be sure to define FEM_BUILD_VISUALIZATION macro before including the FEM classes.")
+    MARK_AS_ADVANCED( FEM_VISUALIZATION )
     IF(FEM_VISUALIZATION)
     # Define the macro that includes all the required functions and include MFC support
     ADD_DEFINITIONS( -DFEM_BUILD_VISUALIZATION /D "_AFXDLL" )
     ENDIF(FEM_VISUALIZATION)
 ENDIF(WIN32)
+
 
 
 
