ENH: Test for itkGradientVectorFlowImageFilter added.

--- a/Testing/Code/Algorithms/CMakeLists.txt
+++ b/Testing/Code/Algorithms/CMakeLists.txt
@@ -37,6 +37,7 @@ ADD_TEST(itkExtractMeshConnectedRegionsTest itkAlgorithmsTests itkExtractMeshCon
 ADD_TEST(itkFastMarchingTest itkAlgorithmsTests itkFastMarchingTest)
 ADD_TEST(itkFastMarchingExtensionImageFilterTest itkAlgorithmsTests itkFastMarchingExtensionImageFilterTest)
 ADD_TEST(itkGeodesicActiveContoursTest itkAlgorithmsTests itkGeodesicActiveContoursTest)
+ADD_TEST(itkGradientVectorFlowImageFilterTest itkAlgorithmsTests itkGradientVectorFlowImageFilterTest)
 ADD_TEST(itkSimpleFuzzyConnectednessScalarImageFilterTest itkAlgorithmsTests itkSimpleFuzzyConnectednessScalarImageFilterTest)
 ADD_TEST(itkHistogramMatchingImageFilterTest itkAlgorithmsTests itkHistogramMatchingImageFilterTest)
 ADD_TEST(itkImageMapperTest itkAlgorithmsTests itkImageMapperTest)
@@ -117,6 +118,7 @@ itkExtractMeshConnectedRegionsTest
 itkFastMarchingTest
 itkFastMarchingExtensionImageFilterTest
 itkGeodesicActiveContoursTest
+itkGradientVectorFlowImageFilterTest
 itkSimpleFuzzyConnectednessScalarImageFilterTest
 itkHistogramMatchingImageFilterTest
 itkImageMapperTest
