ENH: itkRawImageIOTest3 added.

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -17,7 +17,8 @@ itkMetaImageIOTest
 itkPNGImageIOTest
 itkVOLImageIOTest
 itkVTKImageIOTest
-itkRawImageIOTest)
+itkRawImageIOTest
+itkRawImageIOTest3)
  
 ADD_EXECUTABLE(itkIOTests itkIOTests.cxx IOTest_SRCS)
 
