ENH: Test for reading an BigEndian raw image file added.

--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -18,7 +18,8 @@ itkPNGImageIOTest
 itkVOLImageIOTest
 itkVTKImageIOTest
 itkRawImageIOTest
-itkRawImageIOTest3)
+itkRawImageIOTest3
+itkRawImageIOTest4)
  
 ADD_EXECUTABLE(itkIOTests itkIOTests.cxx IOTest_SRCS)
 
