ENH: new filter which binarize an image by thresholding.

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -33,6 +33,7 @@ ADD_TEST(itkAdaptImageFilterTest2 itkBasicFiltersTests itkAdaptImageFilterTest2)
 ADD_TEST(itkBasicArchitectureTest itkBasicFiltersTests itkBasicArchitectureTest)
 ADD_TEST(itkBinaryDilateImageFilterTest itkBasicFiltersTests itkBinaryDilateImageFilterTest)
 ADD_TEST(itkBinaryMagnitudeImageFilterTest itkBasicFiltersTests itkBinaryMagnitudeImageFilterTest)
+ADD_TEST(itkBinaryThresholdImageFilterTest itkBasicFiltersTests itkBinaryThresholdImageFilterTest)
 ADD_TEST(itkBloxBoundaryPointImageTest itkBasicFiltersTests itkBloxBoundaryPointImageTest)
 ADD_TEST(itkBloxCoreAtomTest itkBasicFiltersTests itkBloxCoreAtomTest)
 ADD_TEST(itkChangeInformationImageFilterTest itkBasicFiltersTests itkChangeInformationImageFilterTest)
@@ -126,8 +127,9 @@ itkAtanImageFilterAndAdaptorTest
 itkAdaptImageFilterTest 
 itkAdaptImageFilterTest2 
 itkBasicArchitectureTest 
-itkBinaryDilateImageFilterTest 
-itkBinaryMagnitudeImageFilterTest 
+itkBinaryDilateImageFilterTest
+itkBinaryMagnitudeImageFilterTest
+itkBinaryThresholdImageFilterTest
 itkBloxBoundaryPointImageTest 
 itkBloxCoreAtomTest 
 itkConfidenceConnectedImageFilterTest 
