ENH: Prototype Tcl wrappers with new Cable.

--- a/Wrapping/Tcl/Common/CMakeLists.txt
+++ b/Wrapping/Tcl/Common/CMakeLists.txt
@@ -1,52 +1,10 @@
-INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Wrapping/Tcl/Common)
+INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Wrapping/Tcl/Numerics)
 
-CABLE_CLASS_SET(Scalar float)
-CABLE_CLASS_SET(Dimension 2)
-CABLE_CLASS_SET(Image "itk::Image<$Scalar,$Dimension>")
-CABLE_CLASS_SET(Container "itk::ValarrayImageContainer<unsigned long, $Scalar>")
-
-ADD_LIBRARY(ITKCommonTcl SHARED
-  itkTclCommand
-  itkTclStringStream
-)
-
-CABLE_CLASS_SET(ItkCommonBase
-  itk::Command
-  itk::DataObject
-  itk::Directory
-  itk::ImageIO
-  itk::LightObject
-  itk::LightProcessObject
-  itk::Object
-  itk::OutputWindow
-  itk::ProcessObject
-  itk::TclCommand
-  itk::Version
-)
-
+ADD_LIBRARY(ITKCommonTcl SHARED)
 CABLE_WRAP_TCL(ITKCommonTcl
-  $ItkCommonBase
-  itk::MeshRegion
-  itk::Region
-  itk::TclStringStream
-  itk::TimeStamp
-  "itkSmartPointer_:itk::SmartPointer<$ItkCommonBase >"
-
-  itk::ImageBase<$Dimension>
-  itk::Size<$Dimension>
-  itk::Index<$Dimension>
-  itk::ImageRegion<$Dimension>
-  $Image
-  $Container
-  "itk::ImageSource<$Image >"
-  "itk::ImageToImageFilter<$Image, $Image >"
-  "itkSmartPointer_:itk::SmartPointer<$Image >"
-  "itkSmartPointer_:itk::SmartPointer<$Container >"
+  wrap_ITKCommon.cxx
+  wrap_ITKBase.cxx
+  wrap_itkImage.cxx
 )
 
-LINK_LIBRARIES(
-ITKCommon
-VXLNumerics
-${CABLE_TCL_LIBRARY}
-${TCL_LIBRARY}
-)
+LINK_LIBRARIES(ITKCommon VXLNumerics ${CABLE_TCL_LIBRARY})
