--- a/Wrapping/Tcl/CMakeLists.txt
+++ b/Wrapping/Tcl/CMakeLists.txt
@@ -5,6 +5,7 @@ INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH}
                     ${ITK_SOURCE_DIR}/Code/Numerics/vxl/vcl/doc
                     ${ITK_SOURCE_DIR}/Code/Numerics/vxl/vnl)
 
-SUBDIRS(Numerics Common BasicFilters Algorithms)
+SUBDIRS(Numerics Common)
+#SUBDIRS(Numerics Common BasicFilters Algorithms)
 
-INCLUDE(${ITK_SOURCE_DIR}/Wrapping/Tcl/itkConfigureTclPackages.cmake)
+#INCLUDE(${ITK_SOURCE_DIR}/Wrapping/Tcl/itkConfigureTclPackages.cmake)
