--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -16,7 +16,7 @@ itkzlib
 )
 
 IF(ITK_WRAP_TCL)
-  INCLUDE(${ITK_SOURCE_DIR}/Testing/Code/BasicFilters/CMakeListsTcl.txt)
+#  INCLUDE(${ITK_SOURCE_DIR}/Testing/Code/BasicFilters/CMakeListsTcl.txt)
 ENDIF(ITK_WRAP_TCL)
 
 IF (TCL_TCLSH)
