--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -3,7 +3,7 @@ ITKCommon
 )
 
 IF(ITK_WRAP_TCL)
-  INCLUDE(${ITK_SOURCE_DIR}/Testing/Code/Common/CMakeListsTcl.txt)
+#  INCLUDE(${ITK_SOURCE_DIR}/Testing/Code/Common/CMakeListsTcl.txt)
 ENDIF(ITK_WRAP_TCL)
 
 IF (TCL_TCLSH)
