ENH: Tcl libraries no longer need to be shared.

--- a/Wrapping/Tcl/Common/CMakeLists.txt
+++ b/Wrapping/Tcl/Common/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Wrapping/Tcl/Numerics)
 
-ADD_LIBRARY(ITKCommonTcl SHARED)
+ADD_LIBRARY(ITKCommonTcl)
 CABLE_WRAP_TCL(ITKCommonTcl
   wrap_ITKCommon.cxx
   wrap_ITKBase.cxx
