--- a/Wrapping/Tcl/Numerics/CMakeLists.txt
+++ b/Wrapping/Tcl/Numerics/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE_DIRECTORIES(${ITK_SOURCE_DIR}/Wrapping/Tcl/Numerics)
 
-ADD_LIBRARY(VXLNumericsTcl SHARED)
+ADD_LIBRARY(VXLNumericsTcl)
 CABLE_WRAP_TCL(VXLNumericsTcl
   wrap_VXLNumerics.cxx
   wrap_vnl_matrix.cxx
